# livesey-engine

./: .gitmodules  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  Readme.org  cmake_install.cmake  imgui.ini
src/: main.cpp
src/livesey/: engine.cpp  engine.h  event_receiver.h  events.h  imgui_receiver.cpp  imgui_receiver.h  input.cpp  input.h  log.h  platform.h  window.cpp  window.h
src/livesey/ecs/: components.h  ecs.h  game_object.cpp  game_object.h  scene.cpp  scene.h
src/livesey/graphics/: index_buffer.cpp  index_buffer.h  orthographic_camera.cpp  orthographic_camera.h  renderer_2d.cpp  renderer_2d.h  shader.cpp  shader.h  textures.cpp  textures.h  vertex_array.cpp  vertex_array.h  vertex_attribute.h  vertex_buffer.cpp  vertex_buffer.h
